--- a/demo/DemoSolution/DemoProject/Components/Pages/Home.razor
+++ b/demo/DemoSolution/DemoProject/Components/Pages/Home.razor
@@ -4,7 +4,22 @@
 
 <h1>Snacks</h1>
 
-Naam: @Name
+<EditForm Model="NewSnack" OnValidSubmit="AddSnack" FormName="AddSnackForm" Enhance>
+    <DataAnnotationsValidator />
+    @* <FluentValidationValidator /> *@
+    
+    @* <input name="NewSnack.Name"> *@
+    <InputText @bind-Value="NewSnack.Name" />
+    <ValidationMessage For="() => NewSnack.Name" />
+    
+    <InputNumber @bind-Value="NewSnack.Rating" type="range" min="1" max="5" step="0.5" />
+    <ValidationMessage For="() => NewSnack.Rating" />
+    
+    <InputText @bind-Value="NewSnack.PhotoUrl" />
+    <ValidationMessage For="() => NewSnack.PhotoUrl" />
+    
+    <button>Add snack</button>
+</EditForm>
 
 @if (Snacks is null)
 {
