--- a/demo/DemoSolution/DemoProject/Components/Pages/Home.razor.css
+++ b/demo/DemoSolution/DemoProject/Components/Pages/Home.razor.css
@@ -1,6 +1,38 @@
 ﻿td img {
     max-width: 130px;
 }
+
 .heerlijk {
     background: lightgoldenrodyellow;
+}
+
+main {
+    display: flex;
+    gap: 2rem;
+}
+
+form ol {
+    list-style: none;
+    padding: 0;
+    display: grid;
+    row-gap: 0.5rem;
+    column-gap: 1rem;
+    grid-template-areas: 'label input'
+                         '. valmsg';
+    grid-template-columns: min-content 1fr;
+
+    li {
+        grid-column: span 2;
+        grid-row: span 2;
+        display: grid;
+        grid-template-columns: subgrid;
+
+        label {
+            text-wrap: nowrap;
+        }
+
+        div {
+            grid-area: valmsg;
+        }
+    }
 }
