MudBlazor voor styling ingezet

--- a/demo/DemoSolution/DemoProject/Components/Pages/Home.razor
+++ b/demo/DemoSolution/DemoProject/Components/Pages/Home.razor
@@ -4,6 +4,8 @@
 
 <h1>Snacks</h1>
 
+<MudStaticButton Variant="Variant.Filled" Color="Color.Primary">Klik hier</MudStaticButton>
+
 <main>
     <EditForm Model="NewSnack" OnValidSubmit="AddSnack" FormName="AddSnackForm" Enhance>
         <DataAnnotationsValidator/>
