Circuitprobleem laten zien

--- a/demo/DemoSolution/DemoProject/Components/Layout/NavMenu.razor
+++ b/demo/DemoSolution/DemoProject/Components/Layout/NavMenu.razor
@@ -3,5 +3,6 @@
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavLink Href="upload" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Upload</MudNavLink>
     <MudNavLink Href="bestaat-niet" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Bestaat niet</MudNavLink>
-    <MudNavLink Href="IntServer" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">IntServer</MudNavLink>
+    <MudNavLink Href="IntServer" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.CameraFront">IntServer</MudNavLink>
+    <MudNavLink Href="Circuit" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AttachMoney">Circuit</MudNavLink>
 </MudNavMenu>
