WebAssembly laten zien

--- a/demo/DemoSolution/DemoProject/Components/Pages/Circuit.razor
+++ b/demo/DemoSolution/DemoProject/Components/Pages/Circuit.razor
@@ -1,8 +1,7 @@
 @page "/Circuit"
+@using Demo.Shared.Entities
 @using DemoProject.DataAccess
-@using DemoProject.Entities
 @using Microsoft.EntityFrameworkCore
-@using Microsoft.EntityFrameworkCore.Internal
 @inject IDbContextFactory<SnackContext> ContextFactory
 @rendermode InteractiveServer
 <h3>Circuit</h3>
