--- a/demo/DemoSolution/DemoProject/Components/Pages/IntServer.razor
+++ b/demo/DemoSolution/DemoProject/Components/Pages/IntServer.razor
@@ -1,6 +1,7 @@
 ﻿@page "/IntServer"
+@using Demo.Shared.Entities
+@using Demo.Shared.Repositories
 @using DemoProject.Components.Layout
-@using DemoProject.Entities
 @using DemoProject.Repositories
 @inject ISnackRepository SnackRepository
 @rendermode InteractiveServer
