--- a/demo/DemoSolution/DemoProject/Components/Pages/Upload.razor
+++ b/demo/DemoSolution/DemoProject/Components/Pages/Upload.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Upload"
-@using DemoProject.Entities
+@using Demo.Shared.Entities
 <h3>Upload</h3>
 
 <EditForm Model="Snack" OnSubmit="Handle" enctype="multipart/form-data" FormName="doe">
