--- a/demo/DemoSolution/DemoProject/Components/Layout/NavMenu.razor
+++ b/demo/DemoSolution/DemoProject/Components/Layout/NavMenu.razor
@@ -1,5 +1,7 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Counter</MudNavLink>
+    <MudNavLink Href="saaie" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Saaie</MudNavLink>
     <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
     <MudNavLink Href="upload" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Upload</MudNavLink>
     <MudNavLink Href="bestaat-niet" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Bestaat niet</MudNavLink>
