--- a/demo/DemoSolution/DemoProject/Components/Layout/MainLayout.razor
+++ b/demo/DemoSolution/DemoProject/Components/Layout/MainLayout.razor
@@ -11,7 +11,7 @@
         <MudStaticNavDrawerToggle Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
         <MudText Typo="Typo.h6" Style="white-space:nowrap;">Demo</MudText>
         <MudSpacer />
-        <RenderStateViewer Parent="this" Class="px-4" />
+        @* <RenderStateViewer Parent="this" Class="px-4" /> *@
         <LoginDisplay/>
         <MudIconButton Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Href="https://mudblazor.com/" Target="_blank" />
         <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/0phois/MudBlazor.StaticInput" Target="_blank" />
