Laatste dingen: interop laten zien

--- a/demo/DemoSolution/DemoProject/Components/Layout/NavMenu.razor
+++ b/demo/DemoSolution/DemoProject/Components/Layout/NavMenu.razor
@@ -7,4 +7,5 @@
     <MudNavLink Href="bestaat-niet" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Bestaat niet</MudNavLink>
     <MudNavLink Href="IntServer" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.CameraFront">IntServer</MudNavLink>
     <MudNavLink Href="Circuit" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AttachMoney">Circuit</MudNavLink>
+    <MudNavLink Href="Interop" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cloud">Interop</MudNavLink>
 </MudNavMenu>
