--- a/demo/DemoSolution/DemoProject/Components/App.razor
+++ b/demo/DemoSolution/DemoProject/Components/App.razor
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,11 +10,18 @@
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <link rel="stylesheet" href="@Assets["app.css"]"/>
     <link rel="stylesheet" href="@Assets["DemoProject.styles.css"]"/>
+    
+    <AuthorizeView>
+        <Authorized>
+            <script src="script.js"></script>
+        </Authorized>
+    </AuthorizeView>
+    
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <HeadOutlet/>
 </head>
-
+    
 <body>
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
